Week 1 assignment conatct page and app description

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,9 @@
 <h1>About Us</h1>
 
-<p>Working on news timeline site!</p>
+<p>We are a site dedicated to helping Academics, Instructors connect with there students by allowing them to reference current events in realtion to their academic subjects</p>
+
+<p>This will be facebook meets reddit</p>
+
+<p>A teacher can start a group on a general topic and invite students to join that group</p>
+
+<p>Login and build your profile as either teacher or student. You can belong to many groups</p>
