--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,11 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Western Civ News Site</h1>
+
+<h2>Content and News Curation</h2>
+
+<p>Discerning Current Events in Relation to Past historical Trends</p>
+
+<p>Stop looking at news in 24 hour cycles!</p>
+
+<p>There are patterns in history that extend into today with trajectories that extend well before and beyond our own generations. How do today's current events in math, science, technology, politics and culture, war &amp; peace, religion and philosohy apply to the overall trends regarding those topical ongoing movements?</p>
+
+<p>We've got you covered.</p>
