--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
   	<%= link_to "Home", root_path %>
   	<%= link_to "About", about_path %>
+    <%= link_to "Contact", contact_path %>
     <%= yield %>
     
   </body>
