Final adjustment to Week 1 assignment

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -7,3 +7,7 @@
 <p>A teacher can start a group on a general topic and invite students to join that group</p>
 
 <p>Login and build your profile as either teacher or student. You can belong to many groups</p>
+
+<p>When I say "we" I mean me. I would like to build this idea, I am currently teaching front-end web development at a small college in San Luis Obispo, CA. I specialize in custom wordpress theme development-- building sites from scratch and converting them into wordpress themes to leverage the cms. This rails course is my first foray into backend and I'm very pumped to be here</p>
+
+<p>I'm taking this course cause I just took the premium ruby course and had a great experience</p>
