--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,13 +1,6 @@
-<h1>About Us</h1>
-
-<p>We are a site dedicated to helping Academics, Instructors connect with there students by allowing them to reference current events in realtion to their academic subjects</p>
-
-<p>This will be facebook meets reddit</p>
-
-<p>A teacher can start a group on a general topic and invite students to join that group</p>
-
-<p>Login and build your profile as either teacher or student. You can belong to many groups</p>
-
-<p>When I say "we" I mean me. I would like to build this idea, I am currently teaching front-end web development at a small college in San Luis Obispo, CA. I specialize in custom wordpress theme development-- building sites from scratch and converting them into wordpress themes to leverage the cms. This rails course is my first foray into backend and I'm very pumped to be here</p>
-
-<p>I'm taking this course cause I just took the premium ruby course and had a great experience</p>
+<div class="jumbotron">
+    <div class="container">
+        <h1>About us</h1>
+        <p>This is the sample project I built for <a href="https://onemonthrails.com">One Month Rails</a>.</p>
+    </div>
+</div>
