--- a/app/assets/stylesheets/bootstrap_customizations.scss
+++ b/app/assets/stylesheets/bootstrap_customizations.scss
@@ -24,7 +24,7 @@ $gray-light:                #818a91;
 $gray-lighter:              #eceeef;
 $gray-lightest:             #f7f7f9;
 
-$brand-primary:             #0275d8;
+$brand-primary:             #000;
 $brand-success:             #5cb85c;
 $brand-info:                #5bc0de;
 $brand-warning:             #f0ad4e;
