Styled link and tweet buttons

--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
 
-  <h1>Links</h1>
+  <h2>Share a News Story</h2>
+  <h4>Add your link and start the discussion of today's current topics!</h4>
 
   <table class="table">
     <thead>
@@ -31,7 +32,7 @@
   <br>
 
   
-    <%= link_to 'New Link', new_link_path %>
+    <%= link_to 'New Link', new_link_path, class: "btn btn-primary" %>
   
 
 </div> <!-- container -->
