--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -29,8 +29,18 @@
   <br>
 
   
-    <%= link_to 'New Tweet', new_tweet_path %>
+    <%= link_to 'New Tweet', new_tweet_path, class: "btn btn-primary" %>
 
 </div>
+
+
+
+
+
+
+
+
+
+
 
 
