--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,38 +1,39 @@
 <div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <h2>Share a News Story</h2>
+      <h4>Add your link and start the discussion of today's current topics!</h4>
 
-  <h2>Share a News Story</h2>
-  <h4>Add your link and start the discussion of today's current topics!</h4>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Title</th>
+            <th>Url</th>
+            <th>User</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
 
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Title</th>
-        <th>Url</th>
-        <th>User</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <% @links.each do |link| %>
-        <tr>
-          <td><%= link.title %></td>
-          <td><%= link.url %></td>
-          <td><%= link_to 'Show', link %></td>
-           <td><%= link.user %></td>
-          <% if link.user == current_user %>
-            <td><%= link_to 'Edit', edit_link_path(link) %></td>
-            <td><%= link_to 'Destroy', link, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <tbody>
+          <% @links.each do |link| %>
+            <tr>
+              <td><%= link.title %></td>
+              <td><%= link.url %></td>
+              <td><%= link_to 'Show', link %></td>
+               <td><%= link.user %></td>
+              <% if link.user == current_user %>
+                <td><%= link_to 'Edit', edit_link_path(link) %></td>
+                <td><%= link_to 'Destroy', link, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+              <% end %>
+            </tr>
           <% end %>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
+        </tbody>
+      </table>
 
-  <br>
+      <br>
 
-  
-    <%= link_to 'New Link', new_link_path, class: "btn btn-primary" %>
-  
-
+      
+        <%= link_to 'New Link', new_link_path, class: "btn btn-primary" %>
+    </div>
+  </div>
 </div> <!-- container -->
