--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,37 +1,39 @@
 <div class="container">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+        <h1>Tweets</h1>
 
-  <h1>Tweets</h1>
+        <table class="table">
+          <thead>
+            <tr>
+              <th>User</th>
+              <th>Content</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
 
-  <table class="table">
-    <thead>
-      <tr>
-        <th>User</th>
-        <th>Content</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
+          <tbody>
+            <% @tweets.each do |tweet| %>
+              <tr>
+                <td><%= tweet.user %></td>
+                <td><%= tweet.content %></td>
+                <td><%= link_to 'Show', tweet %></td>
+                <% if tweet.user == current_user %>
+                  <td><%= link_to 'Edit', edit_tweet_path(tweet) %></td>
+                  <td><%= link_to 'Destroy', tweet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                <% end %>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
 
-    <tbody>
-      <% @tweets.each do |tweet| %>
-        <tr>
-          <td><%= tweet.user %></td>
-          <td><%= tweet.content %></td>
-          <td><%= link_to 'Show', tweet %></td>
-          <% if tweet.user == current_user %>
-            <td><%= link_to 'Edit', edit_tweet_path(tweet) %></td>
-            <td><%= link_to 'Destroy', tweet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-          <% end %>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
+        <br>
 
-  <br>
-
-  
-    <%= link_to 'New Tweet', new_tweet_path, class: "btn btn-primary" %>
-
-</div>
+        
+          <%= link_to 'New Tweet', new_tweet_path, class: "btn btn-primary" %>
+    </div><!-- .col-md-6 -->
+  </div> <!-- row -->
+</div> <!-- container -->
 
 
 
