--- a/app/views/links/_form.html.erb
+++ b/app/views/links/_form.html.erb
@@ -13,12 +13,12 @@
 
   <div class="form-group">
     <%= f.label :title %>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, class: "form-control" %>
   </div>
 
   <div class="form-group">
     <%= f.label :url %>
-    <%= f.text_field :url %>
+    <%= f.text_field :url, class: "form-control" %>
   </div>
 
   
