--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,20 +1,19 @@
 <div class="container">
+	<div class="row">
 
-	<p>
-	  <strong>User:</strong>
-	  <%= @tweet.user %>
-	</p>
+		<div class="offset-md-2 col-md-8">
+			<div class="card card-block">
+			  	<h4 class="card-title"><%= @tweet.user.email %></h4>
+			  	<p class="card-text"><%= @tweet.content %></p>
+				<% if @tweet.user == current_user %>
+					<%= link_to 'Edit', edit_tweet_path(@tweet), class: "card-link" %>
+					<%= link_to 'Delete', @tweet, method: :delete, class: "card-link" %>
+				<% end %> 
+				<%= link_to 'Back', tweets_path, class: "card-link" %>
+			</div>	
+		</div> <!-- offset-md-2 col-md-8 -->
 
-	<p>
-	  <strong>Content:</strong>
-	  <%= @tweet.content %>
-	</p>
-
-	<% if @tweet.user == current_user %>
-		<%= link_to 'Edit', edit_tweet_path(@tweet) %>
-	<% end %> 
-	<%= link_to 'Back', tweets_path %>
-
-</div>
+	</div> <!-- row -->
+</div> <!-- container -->
 
 
