Set up Username and Name and Validations of those

--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -12,7 +12,7 @@
 
 	<p>
 	  <strong>User:</strong>
-	  <%= @link.user.email %>
+	  <%= @link.user.username %>
 	</p>
 	
 	<% if @link.user == current_user %>
