--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,6 +18,16 @@
     <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder: "Confirm Password" %>
   </div>
 
+  <div class="form-group">
+    <%= f.label :username %>
+    <%= f.text_field :username, autofocus: true, class: "form-control", placeholder: "Minimum 6 characters" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :name %>
+    <%= f.text_field :name, autofocus: true, class: "form-control", placeholder: "Your name" %>
+  </div>
+
   <%= f.submit "Sign up", class: "btn btn-primary" %>
 <% end %>
 
