--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -20,7 +20,7 @@
               <td><%= link.title %></td>
               <td><%= link.url %></td>
               <td><%= link_to 'Show', link %></td>
-               <td><%= link.user.email %></td>
+               <td><%= link.user.username %></td>
               <% if link.user == current_user %>
                 <td><%= link_to 'Edit', edit_link_path(link) %></td>
                 <td><%= link_to 'Destroy', link, method: :delete, data: { confirm: 'Are you sure?' } %></td>
