--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,16 +3,12 @@
 
     <div class="col-md-4"> 
       <div class="card card-block">
-        <h4 class="card-title">Your Account</h4>
-        <p class="card-text"><%= link_to current_user.username, user_path(current_user.username) %></p>
+        <h4 class="card-title"><%= @user.username %></h4>
+        <p class="card-text"><%= @user.name %></p>
       </div>
     </div><!-- .col-md-4 -->
 
      <div class="col-md-8">
-          <% if user_signed_in? %>
-            <center><%= link_to 'New Tweet', new_tweet_path, class: "btn btn-primary" %></center>
-          <% end %>
-
           <ul class="list-group">
             <% @tweets.each do |tweet| %>
                 <%= link_to tweet, class: "list-group-item list-group-item-action" do %>
@@ -25,6 +21,9 @@
 
   </div> <!-- row -->
 </div> <!-- container -->
+
+
+
 
 
 
