--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -3,17 +3,16 @@
 
     <div class="col-md-4"> 
       <div class="card card-block">
-        <h4 class="card-title"><%= @user.username %></h4>
-        <p class="card-text"><%= @user.name %></p>
-        <% if current_user.following?(@user) %>
-           <p class="card-text"><%= link_to "Un-Follow", unfollow_user_path(@user.username), method: :delete %></p>
-        <% else %>
-         <p class="card-text"><%= link_to "Follow", follow_user_path(@user.username), method: :post %></p>
-        <% end %>
+        <h4 class="card-title">Your Account</h4>
+        <p class="card-text"><%= link_to current_user.username, user_path(current_user.username) %></p>
       </div>
     </div><!-- .col-md-4 -->
 
      <div class="col-md-8">
+          <% if user_signed_in? %>
+            <center><%= link_to 'New Tweet', new_tweet_path, class: "btn btn-primary" %></center>
+          <% end %>
+
           <ul class="list-group">
             <% @tweets.each do |tweet| %>
                 <%= link_to tweet, class: "list-group-item list-group-item-action" do %>
@@ -26,9 +25,6 @@
 
   </div> <!-- row -->
 </div> <!-- container -->
-
-
-
 
 
 
