--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -3,8 +3,12 @@
 
     <div class="col-md-4"> 
       <div class="card card-block">
+        <% if user_signed_in? %>
         <h4 class="card-title">Your Account</h4>
         <p class="card-text"><%= link_to current_user.username, user_path(current_user.username) %></p>
+        <% else %>
+           <p class="card-text"><%= link_to "Sign up now!", signup_path %></p>
+        <% end %>
       </div>
     </div><!-- .col-md-4 -->
 
