--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -7,20 +7,32 @@
       <table class="table">
         <thead>
           <tr>
-            <th>Title</th>
-            <th>Url</th>
+            <th>Votes</th>
             <th>User</th>
-            <th colspan="3"></th>
+            <th>Title</th>
+            <th>Link</th>
+            <th>Visit</th>
+            <th colspan="4"></th>
           </tr>
         </thead>
 
         <tbody>
           <% @links.each do |link| %>
             <tr>
+              <td><%= link.votes_for.up.size %></td>
+              <td><%= link.user.username %></td>
               <td><%= link.title %></td>
               <td><%= link.url %></td>
               <td><%= link_to 'Show', link %></td>
-               <td><%= link.user.username %></td>
+              
+              <% if user_signed_in? %>
+              <% if current_user.voted_up_on? link %>
+                <td><%= link_to 'Unvote', unvote_link_path(link), method: :delete %></td>
+              <% else %>
+                <td><%= link_to 'Vote', vote_link_path(link), method: :post %></td>
+              <% end %>
+              <% end %>
+              
               <% if link.user == current_user %>
                 <td><%= link_to 'Edit', edit_link_path(link) %></td>
                 <td><%= link_to 'Destroy', link, method: :delete, data: { confirm: 'Are you sure?' } %></td>
