--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -4,7 +4,7 @@
 		<div class="offset-md-2 col-md-8">
 			<div class="card card-block">
 			  	<h4 class="card-title"><%= link_to @tweet.user.username, user_path(@tweet.user.username) %></h4>
-			  	<% if tweet.image.present? %>
+			  	<% if @tweet.image.present? %>
 			  		<center><%= image_tag @tweet.image, class: "img-fluid" %></center>
 			  	<% end %>
 			  	<p class="card-text"><%= @tweet.content %></p>
